main functionality added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="window log_in-window hide">
       <div class="closeBtn">X</div>
-      <form action="" method="post" class="flex">
+      <form method="post" class="flex">
         <h3 class="head">Log In</h3>
         <div class="name flex">
           <label for="name">Name</label>
@@ -44,7 +44,7 @@
     </div>
     <div class="window sign_up-window hide">
       <div class="closeBtn">X</div>
-      <form action="" method="post" class="flex">
+      <form method="post" class="flex">
         <h3 class="head">Sign Up</h3>
         <div class="name flex">
           <label for="name">Name</label>
