Responsive Feature Added

--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
           <label for="last-name" class="last_name-label">Last Name</label>
           <input type="text" name="last-name" id="lastName" />
         </div>
-        <div class="password flex">
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" />
-        </div>
 
         <button type="submit" class="submit">Submit</button>
       </form>
@@ -51,9 +47,9 @@
           <input type="text" name="name" id="Name" />
         </div>
 
-        <div class="password flex">
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" />
+        <div class="last_name flex">
+          <label for="last-name" class="last_name-label">Last Name</label>
+          <input type="text" name="last-name" id="lastName" />
         </div>
 
         <button type="submit" class="submit">Submit</button>
