--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A to do list Applivation " />
+    <meta name="description" content="A to do list Application " />
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="js-files/script.js"></script>
